--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/node": "^18.19.3",
     "@types/react": "^18.3.0",
+    "@wagmi/cli": "^2.1.16",
     "autoprefixer": "^10.4.20",
     "next": "^14.2.3",
     "postcss": "^8.4.44",
